--- a/public/css/style.css
+++ b/public/css/style.css
@@ -614,20 +614,12 @@ video {
   right: 1rem;
 }
 
-.right-56 {
-  right: 14rem;
-}
-
 .top-0 {
   top: 0px;
 }
 
 .top-1 {
   top: 0.25rem;
-}
-
-.top-12 {
-  top: 3rem;
 }
 
 .top-2 {
@@ -640,6 +632,134 @@ video {
 
 .top-4 {
   top: 1rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.right-40 {
+  right: 10rem;
+}
+
+.right-52 {
+  right: 13rem;
+}
+
+.right-5 {
+  right: 1.25rem;
+}
+
+.right-56 {
+  right: 14rem;
+}
+
+.right-60 {
+  right: 15rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.left-1\/4 {
+  left: 25%;
+}
+
+.top-1\/4 {
+  top: 25%;
+}
+
+.left-1\/3 {
+  left: 33.333333%;
+}
+
+.top-1\/3 {
+  top: 33.333333%;
+}
+
+.top-\[\] {
+  top: ;
+}
+
+.top-\[1rem\] {
+  top: 1rem;
+}
+
+.top-\[2rem\] {
+  top: 2rem;
+}
+
+.top-\[3rem\] {
+  top: 3rem;
+}
+
+.top-\[4rem\] {
+  top: 4rem;
+}
+
+.top-\[4em\] {
+  top: 4em;
+}
+
+.top-\[10rem\] {
+  top: 10rem;
+}
+
+.left-\[2px\] {
+  left: 2px;
+}
+
+.top-\[2px\] {
+  top: 2px;
+}
+
+.top-\[1px\] {
+  top: 1px;
+}
+
+.top-\[1\.5px\] {
+  top: 1.5px;
+}
+
+.top-\[1\.6px\] {
+  top: 1.6px;
+}
+
+.left-\[1\.6px\] {
+  left: 1.6px;
+}
+
+.left-\[1\.7px\] {
+  left: 1.7px;
+}
+
+.left-\[1\.8px\] {
+  left: 1.8px;
+}
+
+.left-\[1\.9px\] {
+  left: 1.9px;
+}
+
+.left-\[1\.2px\] {
+  left: 1.2px;
+}
+
+.left-\[1\.95px\] {
+  left: 1.95px;
+}
+
+.left-\[1\.99px\] {
+  left: 1.99px;
 }
 
 .-z-10 {
@@ -714,14 +834,6 @@ video {
   height: 4rem;
 }
 
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .h-40 {
   height: 10rem;
 }
@@ -732,6 +844,10 @@ video {
 
 .h-8 {
   height: 2rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .h-\[100vh\] {
@@ -787,6 +903,51 @@ video {
   height: 100vh;
 }
 
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.max-h-fit {
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}
+
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-\[100vh\] {
+  max-height: 100vh;
+}
+
+.min-h-\[70vh\] {
+  min-height: 70vh;
+}
+
 .w-14 {
   width: 3.5rem;
 }
@@ -795,16 +956,8 @@ video {
   width: 4rem;
 }
 
-.w-3 {
-  width: 0.75rem;
-}
-
 .w-32 {
   width: 8rem;
-}
-
-.w-4 {
-  width: 1rem;
 }
 
 .w-40 {
@@ -823,6 +976,10 @@ video {
   width: 16rem;
 }
 
+.w-96 {
+  width: 24rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -833,14 +990,6 @@ video {
 
 .w-\[100vw\] {
   width: 100vw;
-}
-
-.w-\[115px\] {
-  width: 115px;
-}
-
-.w-\[150px\] {
-  width: 150px;
 }
 
 .w-\[200px\] {
@@ -855,16 +1004,8 @@ video {
   width: 278.27px;
 }
 
-.w-\[350px\] {
-  width: 350px;
-}
-
 .w-\[400px\] {
   width: 400px;
-}
-
-.w-\[420px\] {
-  width: 420px;
 }
 
 .w-\[50vw\] {
@@ -873,6 +1014,10 @@ video {
 
 .w-\[600px\] {
   width: 600px;
+}
+
+.w-\[700px\] {
+  width: 700px;
 }
 
 .w-\[73\%\] {
@@ -893,6 +1038,38 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.w-\[70v\] {
+  width: 70v;
+}
+
+.w-\[70vw\] {
+  width: 70vw;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[800px\] {
+  width: 800px;
+}
+
+.w-\[900px\] {
+  width: 900px;
 }
 
 .max-w-full {
@@ -996,12 +1173,20 @@ video {
   flex-wrap: nowrap;
 }
 
+.content-center {
+  align-content: center;
+}
+
 .items-end {
   align-items: flex-end;
 }
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1077,6 +1262,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1120,6 +1309,11 @@ video {
   background-color: rgb(35 35 39 / var(--tw-bg-opacity));
 }
 
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
 .bg-semiWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(245 246 248 / var(--tw-bg-opacity));
@@ -1132,6 +1326,15 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-semiBlack {
+  background-color: rgba(0,0,0,0.6);
+}
+
+.bg-pink-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-30 {
@@ -1167,6 +1370,14 @@ video {
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-1 {
@@ -1249,6 +1460,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1307,6 +1523,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .font-Work {
@@ -1402,6 +1622,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-semiBlack {
+  color: rgba(0,0,0,0.6);
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1442,9 +1666,19 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-semiBlack {
   --tw-shadow-color: rgba(0,0,0,0.6);
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.outline {
+  outline-style: solid;
 }
 
 .blur {
@@ -1469,6 +1703,12 @@ video {
 
 .backdrop-blur-lg {
   --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.backdrop-blur-md {
+  --tw-backdrop-blur: blur(12px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -1734,7 +1974,11 @@ input[type="checkbox"]:checked::before {
 }
 
 #location:hover + #map{
-  display: block;
+  display: flex;
+}
+
+#map:hover{
+  display: flex;
 }
 
 .before\:absolute::before {
@@ -1815,6 +2059,23 @@ input[type="checkbox"]:checked::before {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-lg:hover {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-md:hover {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-semiBlack:hover {
+  --tw-shadow-color: rgba(0,0,0,0.6);
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .hover\:before\:w-full:hover::before {
