--- a/public/css/style.css
+++ b/public/css/style.css
@@ -610,8 +610,16 @@ video {
   right: 0.25rem;
 }
 
+.right-10 {
+  right: 2.5rem;
+}
+
 .right-4 {
   right: 1rem;
+}
+
+.right-60 {
+  right: 15rem;
 }
 
 .top-0 {
@@ -620,6 +628,10 @@ video {
 
 .top-1 {
   top: 0.25rem;
+}
+
+.top-10 {
+  top: 2.5rem;
 }
 
 .top-2 {
@@ -632,134 +644,6 @@ video {
 
 .top-4 {
   top: 1rem;
-}
-
-.right-12 {
-  right: 3rem;
-}
-
-.right-40 {
-  right: 10rem;
-}
-
-.right-52 {
-  right: 13rem;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-56 {
-  right: 14rem;
-}
-
-.right-60 {
-  right: 15rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.left-1\/4 {
-  left: 25%;
-}
-
-.top-1\/4 {
-  top: 25%;
-}
-
-.left-1\/3 {
-  left: 33.333333%;
-}
-
-.top-1\/3 {
-  top: 33.333333%;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[1rem\] {
-  top: 1rem;
-}
-
-.top-\[2rem\] {
-  top: 2rem;
-}
-
-.top-\[3rem\] {
-  top: 3rem;
-}
-
-.top-\[4rem\] {
-  top: 4rem;
-}
-
-.top-\[4em\] {
-  top: 4em;
-}
-
-.top-\[10rem\] {
-  top: 10rem;
-}
-
-.left-\[2px\] {
-  left: 2px;
-}
-
-.top-\[2px\] {
-  top: 2px;
-}
-
-.top-\[1px\] {
-  top: 1px;
-}
-
-.top-\[1\.5px\] {
-  top: 1.5px;
-}
-
-.top-\[1\.6px\] {
-  top: 1.6px;
-}
-
-.left-\[1\.6px\] {
-  left: 1.6px;
-}
-
-.left-\[1\.7px\] {
-  left: 1.7px;
-}
-
-.left-\[1\.8px\] {
-  left: 1.8px;
-}
-
-.left-\[1\.9px\] {
-  left: 1.9px;
-}
-
-.left-\[1\.2px\] {
-  left: 1.2px;
-}
-
-.left-\[1\.95px\] {
-  left: 1.95px;
-}
-
-.left-\[1\.99px\] {
-  left: 1.99px;
 }
 
 .-z-10 {
@@ -794,6 +678,10 @@ video {
   margin-bottom: 4rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -806,6 +694,10 @@ video {
   margin-top: 7rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .block {
   display: block;
 }
@@ -816,6 +708,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .hidden {
@@ -834,6 +730,14 @@ video {
   height: 4rem;
 }
 
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
 .h-40 {
   height: 10rem;
 }
@@ -844,10 +748,6 @@ video {
 
 .h-8 {
   height: 2rem;
-}
-
-.h-96 {
-  height: 24rem;
 }
 
 .h-\[100vh\] {
@@ -886,6 +786,10 @@ video {
   height: 65vh;
 }
 
+.h-\[75vh\] {
+  height: 75vh;
+}
+
 .h-\[80px\] {
   height: 80px;
 }
@@ -903,49 +807,8 @@ video {
   height: 100vh;
 }
 
-.h-\[70vh\] {
-  height: 70vh;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-\[75vh\] {
-  height: 75vh;
-}
-
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-}
-
-.max-h-full {
-  max-height: 100%;
-}
-
 .max-h-\[100vh\] {
   max-height: 100vh;
-}
-
-.min-h-\[70vh\] {
-  min-height: 70vh;
 }
 
 .w-14 {
@@ -956,8 +819,16 @@ video {
   width: 4rem;
 }
 
+.w-3 {
+  width: 0.75rem;
+}
+
 .w-32 {
   width: 8rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .w-40 {
@@ -974,10 +845,6 @@ video {
 
 .w-64 {
   width: 16rem;
-}
-
-.w-96 {
-  width: 24rem;
 }
 
 .w-\[100\%\] {
@@ -1008,6 +875,10 @@ video {
   width: 400px;
 }
 
+.w-\[500px\] {
+  width: 500px;
+}
+
 .w-\[50vw\] {
   width: 50vw;
 }
@@ -1016,8 +887,8 @@ video {
   width: 600px;
 }
 
-.w-\[700px\] {
-  width: 700px;
+.w-\[70vw\] {
+  width: 70vw;
 }
 
 .w-\[73\%\] {
@@ -1032,6 +903,10 @@ video {
   width: 80vw;
 }
 
+.w-\[900px\] {
+  width: 900px;
+}
+
 .w-\[972px\] {
   width: 972px;
 }
@@ -1040,36 +915,12 @@ video {
   width: 100%;
 }
 
-.w-\[500px\] {
-  width: 500px;
+.w-24 {
+  width: 6rem;
 }
 
-.w-\[70v\] {
-  width: 70v;
-}
-
-.w-\[70vw\] {
-  width: 70vw;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-\[800px\] {
-  width: 800px;
-}
-
-.w-\[900px\] {
-  width: 900px;
+.w-28 {
+  width: 7rem;
 }
 
 .max-w-full {
@@ -1173,10 +1024,6 @@ video {
   flex-wrap: nowrap;
 }
 
-.content-center {
-  align-content: center;
-}
-
 .items-end {
   align-items: flex-end;
 }
@@ -1262,10 +1109,6 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1309,11 +1152,6 @@ video {
   background-color: rgb(35 35 39 / var(--tw-bg-opacity));
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
 .bg-semiWhite {
   --tw-bg-opacity: 1;
   background-color: rgb(245 246 248 / var(--tw-bg-opacity));
@@ -1326,15 +1164,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-semiBlack {
-  background-color: rgba(0,0,0,0.6);
-}
-
-.bg-pink-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-30 {
@@ -1366,14 +1195,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-4 {
-  padding: 1rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .p-6 {
@@ -1460,17 +1281,12 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
 
-.pl-24 {
-  padding-left: 6rem;
+.pl-12 {
+  padding-left: 3rem;
 }
 
 .pl-8 {
@@ -1523,10 +1339,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.align-middle {
-  vertical-align: middle;
 }
 
 .font-Work {
@@ -1622,10 +1434,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-semiBlack {
-  color: rgba(0,0,0,0.6);
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -1683,11 +1491,6 @@ video {
 
 .blur {
   --tw-blur: blur(8px);
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.brightness-50 {
-  --tw-brightness: brightness(.5);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -2055,21 +1858,15 @@ input[type="checkbox"]:checked::before {
   opacity: 0.7;
 }
 
-.hover\:shadow-xl:hover {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.hover\:shadow-lg:hover {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .hover\:shadow-md:hover {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.hover\:shadow-xl:hover {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
