--- a/templates/filter.html
+++ b/templates/filter.html
@@ -28,6 +28,7 @@
 </head>
 
 <body class="font-Work bg-mainColor text-[#f5f6f8] relative">
+    <?php error_reporting(E_ALL & ~E_DEPRECATED); ?>
 
     <?php include './components/navbar.php'?>
 
