--- a/templates/actor-profile.html
+++ b/templates/actor-profile.html
@@ -1,3 +1,73 @@
+<?php 
+require_once realpath(__DIR__ . '../../../') . "/vendor/autoload.php";
+
+// Setup some additional prefixes for DBpedia
+\EasyRdf\RdfNamespace::set('dbc', 'http://dbpedia.org/resource/Category:');
+\EasyRdf\RdfNamespace::set('dbo', 'http://dbpedia.org/ontology/');
+\EasyRdf\RdfNamespace::set('dbpedia', 'http://dbpedia.org/property/');
+\EasyRdf\RdfNamespace::set('dbr', 'http://dbpedia.org/resource/');
+\EasyRdf\RdfNamespace::set('actor', 'https://example.org/schema/actor');
+\EasyRdf\RdfNamespace::set('gold', 'http://purl.org/linguistics/gold/');
+\EasyRdf\RdfNamespace::set('dbp', 'http://dbpedia.org/property/');
+\EasyRdf\RdfNamespace::set('rdf', 'http://www.w3.org/1999/02/22-rdf-syntax-ns#');
+\EasyRdf\RdfNamespace::set('rdfs', 'http://www.w3.org/2000/01/rdf-schema#');
+\EasyRdf\RdfNamespace::set('foaf', 'http://xmlns.com/foaf/0.1/');
+
+$sparql = new \EasyRdf\Sparql\Client('http://dbpedia.org/sparql');
+$sparql_jena = new \EasyRdf\Sparql\Client('http://localhost:3030/Tubes_WS/sparql');
+
+error_reporting(E_ALL & ~E_DEPRECATED);
+
+$originalString = $_GET['actor'];
+$convertedString = str_replace('_', ' ', $originalString);
+$abstract = 'SELECT ?abstract WHERE {' .
+    '?actor rdfs:label "' . $convertedString . '"@en;' .
+    'dbo:abstract ?abstract .' .
+    'FILTER langMatches (lang(?abstract),"EN").' .
+    '}';
+
+$result_abstract = $sparql->query($abstract);
+
+foreach ($result_abstract as $abs) {
+    $abstract = $abs->abstract;
+}
+
+
+$q = 'SELECT DISTINCT * WHERE {
+    ?actor ' .
+    '    rdfs:label "' . $convertedString . '"@en; ' .
+    '    dbo:abstract ?abstract; ' .
+    '    dbo:wikiPageWikiLink ?wiki; ' .
+    '    dbo:birthDate ?birthDate; ' .
+    '    dbo:birthPlace ?birthPlace; ' . 
+    '    dbp:name ?name. ' . 
+    'FILTER langMatches (lang(?abstract),"EN") ' .
+    '}';
+
+$result_all = $sparql->query($q);
+
+    if (count($result_all) > 0) {
+        $firstResult = $result_all[0]; // Assuming you want the first result
+
+        $actorUri = $firstResult->actor;
+        $abstract = $firstResult->abstract;
+        $wikiLink = isset($firstResult->wiki) ? $firstResult->wiki : null; // Check if wiki exists
+
+        $birthDate = $firstResult->birthDate;
+        $birthPlace = $firstResult->birthPlace;
+        $name = $firstResult->name;
+        
+
+        if ($wikiLink !== null) {
+            \EasyRdf\RdfNamespace::setDefault('og');
+            $wiki = \EasyRdf\Graph::newAndLoad($wikiLink);
+            $foto_url = $wiki->image;
+        } else {
+            // Handle the case where wikiLink is undefined
+        }
+    }
+
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +76,7 @@
     <link rel="stylesheet" href="../css/style.css?php echo time(); ?>"/>
     <script src="https://kit.fontawesome.com/e87c4faa10.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1fc4ea1c6a.js" crossorigin="anonymous"></script>
-    <title>Judul Movie</title>
+    <title>Actor Profile</title>
 </head>
 
 <body class="font-Work transition-colors bg-semiWhite">
@@ -14,12 +84,11 @@
     <div class="w-full bg-mainColor">
         <?php include './components/navbar.php'?>
     </div>
-    
     <div class="profile-radius bg-mainColor h-[50vh] flex flex-col gap-8 justify-center items-center">
         <img class="rounded-full w-40 h-40 object-cover"
-        src="https://akcdn.detik.net.id/visual/2019/09/11/762f1f2b-443b-41d8-9646-ad94598c2339_43.jpeg?w=360&q=90" alt="">
+        src="<?= $foto_url ?>" alt="">
         <div class="flex flex-col items-center gap-2 relative w-full">
-            <p class="text-4xl text-semiWhite font-bold">Chris Evans</p>
+            <p class="text-4xl text-semiWhite font-bold"><?= $name ?></p>
             <p class="text-xl text-semiWhite opacity-50">Actor</p>
             <p class="text-lg text-semiWhite opacity-50 flex items-center gap-1 cursor-pointer" id="location"><i class="fa-solid fa-location-dot"></i> USA</p>
 
@@ -39,7 +108,7 @@
             </div>
         
             <div class="">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero et voluptatibus inventore, maiores autem similique est animi voluptas, vero, corporis deleniti rerum tenetur nemo iste aut veritatis illum! Aliquam, cupiditate! Consectetur, deserunt libero assumenda sit mollitia accusantium architecto ipsum inventore quae sunt excepturi totam voluptatem voluptate? Consequatur minus tempore quod?</p>
+                    <p><?= $abstract ?></p>
             </div>        
         </div>
         
@@ -52,11 +121,11 @@
             <div class="">
                 <div class="border-bottom flex gap-4 h-[50px]">
                     <p class="font-bold">Born</p>
-                    <p class="name">June 13, 1981 · Boston, Massachusetts, USA</p>
+                    <p class="name">June 13, 1981 · <?= $birthPlace ?></p>
                 </div>
                 <div class="border-bottom flex gap-4 h-[50px]">
                     <p class="font-bold">Birth name</p>
-                    <p class="name">Christopher Robert Evans</p>
+                    <p class="name"><?= $name ?></p>
                 </div>
                 <div class="border-bottom flex gap-4 h-[50px]">
                     <p class="font-bold">Nickname</p>
@@ -81,52 +150,52 @@
 
             <div class="">
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Captain America: The Winter Soldier</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Captain America: The Winter Soldier</a>
                     <p class="name">2014</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">The Avengers</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">The Avengers</a>
                     <p class="name">2012</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Captain America: Civil War</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Captain America: Civil War</a>
                     <p class="name">2016</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Snowpiercer</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Snowpiercer</a>
                     <p class="name">2013</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Scott Pilgrim vs. The World</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Scott Pilgrim vs. The World</a>
                     <p class="name">2010</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Knives Out</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Knives Out</a>
                     <p class="name">2019</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Captain America: The First Avenger</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Captain America: The First Avenger</a>
                     <p class="name">2011</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Avengers: Endgame</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Avengers: Endgame</a>
                     <p class="name">2019</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Fantastic Four</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Fantastic Four</a>
                     <p class="name">2005</p>
                 </div>
 
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
-                    <a href="./detail-movie.php" class="font-bold hover:underline">Sunshine</a>
+                    <a href="./detail-actor.php" class="font-bold hover:underline">Sunshine</a>
                     <p class="name">2007</p>
                 </div>
             </div>        
