--- a/templates/detail-movie.html
+++ b/templates/detail-movie.html
@@ -54,7 +54,7 @@
 
         <div class="flex gap-2 text-semiWhite">
             {% for genre in details.genre %}
-            <a href=""
+            <a href="{{ url_for('filter',type='genre',desc=genre) }}"
                 class="border border-semiWhite rounded-full px-2 py-1 opacity-100 hover:opacity-70 transition-opacity duration-300">
                 {{ genre }}</a>
             {% endfor %}
@@ -67,9 +67,9 @@
             <div class="flex gap-4 text-semiWhite border-top">
                 <b class="w-[100px]">Directors</b>
                 {% if details.director %}
-                <span>&#x2022;</span>
                 {% for director in details.director %}
-                <p class="name">{{ director }}</p>
+                <span>&#x2022;</span>
+                <a href="{{ url_for('detail_page', role='director', name=director) }}" class="name">{{ director }}</a>
                 {% endfor %}
                 {% else %}
                 <p>No director information available.</p>
@@ -80,9 +80,9 @@
             <div class="flex gap-4 text-semiWhite border-top">
                 <b class="w-[100px]">Writers</b>
                 {% if details.writer %}
-                <span>&#x2022;</span>
                 {% for writer in details.writer %}
-                <p class="name">{{ writer }}</p>
+                <span>&#x2022;</span>
+                <a href="{{ url_for('detail_page', role='writer', name=writer) }}" class="name">{{ writer }}</a>
                 {% endfor %}
                 {% else %}
                 <p>No writer information available.</p>
@@ -92,11 +92,10 @@
             <!-- Casts -->
             <div class="flex gap-4 text-semiWhite border-top">
                 <b class="w-[100px]">Casts</b>
-                <div class="flex gap-4 text-semiWhite border-top">
                     {% if details.starring %}
                         {% for starring in details.starring %}
                         <span>&#x2022;</span>
-                        <a href="./actor-profile.php?actor={{ starring }}" class="name">{{ starring }}</a>
+                        <a href="{{ url_for('detail_page', role='actor', name=starring) }}" class="name">{{ starring }}</a>
                         {% endfor %}
                     {% else %}
                         <p>No cast information available.</p>
