--- a/templates/filter.html
+++ b/templates/filter.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/e87c4faa10.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1fc4ea1c6a.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../css/style.css?php echo time(); ?>"/>
+    <link rel="stylesheet" href="../static/css/style.css"/>
     <style>
         .dropdown input:checked + p {
             color: black;
@@ -28,17 +28,16 @@
 </head>
 
 <body class="font-Work bg-mainColor text-[#f5f6f8] relative">
-    <?php error_reporting(E_ALL & ~E_DEPRECATED); ?>
 
-    <?php include './components/navbar.php'?>
+    {% include 'components/navbar.html' %}
 
     <div class="flex">
         <div class="flex flex-col gap-6 w-[73%]">
         <!-- Search START -->
             <div class="pl-8 pr-6 pt-10 flex flex-col gap-6">
                 <div class="flex items-center gap-2">
-                    <form action="filter.php" method="GET" class="flex gap-2">
-                        <input type="text" name="search" placeholder="Search..." autocomplete="off" value="<?= $_GET['search'] ?? "" ?>"
+                    <form action="{{ url_for('process_form') }}" method="GET" class="flex gap-2">
+                        <input type="text" name="search" placeholder="Search..." autocomplete="off" value="<?= $_GET['search'] ?? " ?>"
                             class="rounded-md text-\[\#f5f6f8\]] h-10 px-4 py-1 w-[900px] bg-lightGray">
     
                         <button type="submit" 
@@ -57,9 +56,9 @@
                 </div>
                 <div class="flex w-[100%] flex-wrap gap-y-6 gap-x-4">
                     <!--  -->
-                    <?php for ($i=0; $i < 10; $i++) { ?>
-                    <a href="./detail-movie.php" class="w-[200px] relative z-2">
-                        <img class="rounded-md shadow-md" src="../img/avengersHD.jpg" width="200" alt="">
+                    {% for i in range(10) %}
+                    <a href="#" class="w-[200px] relative z-2">
+                        <img class="rounded-md shadow-md" src="../static/img/avengersHD.jpg" width="200" alt="">
                         <div class="min-h-16 h-fit max-w-full">
                             <div class="flex text-sm gap-2">
                                 <p class="border border-1 border-semiWhite px-1 rounded-md">2018</p>
@@ -69,7 +68,7 @@
                         </div>
                         <p class="absolute -top-2 left-1/2 transform -translate-x-1/2 bg-green-600 px-2 rounded-full font-semibold">8.0</p>
                     </a>
-                    <?php } ?>
+                    {% endfor %}
                     <!--  -->       
                 </div>
             </div>
@@ -85,16 +84,16 @@
                 </div>
                 <div class="h-[100vh] w-full rounded-md">
                     <!--  -->
-                    <?php for ($i=0; $i < 9; $i++) { ?>
+                    {% for i in range(10) %}
                     <a href="./detail-movie.php" class="flex h-[80px] w-full gap-2 bg-lightGray rounded-md mb-4 overflow-hidden hover:bg-darkGray transition-colors duration-200 ease-in-out">
-                        <img src="../img/avengersHD.jpg" height="80" alt="">
+                        <img src="../static/img/avengersHD.jpg" height="80" alt="">
 
                         <div class="flex flex-col justify-center">
                             <p class="font-light text-sm opacity-50">8.4 / Action / PG-13</p>
                             <p class="font-semibold">Avengers: Infinity War</p>
                         </div>
                     </a>
-                    <?php } ?>
+                    {% endfor %}
                     <!--  -->  
                 </div>
             </div>
@@ -122,7 +121,7 @@
     <!-- PAGINATION END -->
     
     <div class="text-semiWhite">    
-        <?php include './components/footer.php'?>
+        {% include 'components/footer.html' %}
     </div>
 
     <!-- MODAL START -->
@@ -134,7 +133,7 @@
                     <div class="flex flex-col gap-4">
                         <p class="text-xl text-semiWhite font-bold">Genre</p>
                         <div  class="flex gap-4 flex-wrap px-4">
-                            <?php for ($i=1; $i < 20; $i++) { ?>
+                            {% for i in range(1, 20) %}
                             <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
@@ -142,12 +141,12 @@
                                 <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">Action</p>
                             </label>
-                            <?php }  ?>
+                            {% endfor %}
                         </div>
                         
                         <p class="text-xl text-semiWhite font-bold">Country</p>
                         <div  class="flex gap-4 flex-wrap px-4">
-                            <?php for ($i=1; $i < 10; $i++) { ?>
+                            {% for i in range(1, 10) %}
                             <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
@@ -155,12 +154,12 @@
                                 <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">Indonesia</p>
                             </label>
-                            <?php }  ?>
+                            {% endfor %}
                         </div>
                         
                         <p class="text-xl text-semiWhite font-bold">Rating</p>
                         <div  class="flex gap-4 flex-wrap px-4">
-                            <?php for ($i=1; $i < 10; $i++) { ?>
+                            {% for i in range(1, 10) %}
                             <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
@@ -168,12 +167,12 @@
                                 <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">5.0</p>
                             </label>
-                            <?php }  ?>
+                            {% endfor %}
                         </div>
                         
                         <p class="text-xl text-semiWhite font-bold">Rating</p>
                         <div  class="flex gap-4 flex-wrap px-4">
-                            <?php for ($i=1; $i < 10; $i++) { ?>
+                            {% for i in range(1, 10) %}
                             <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
@@ -181,7 +180,7 @@
                                 <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">PG-13</p>
                             </label>
-                            <?php }  ?>
+                            {% endfor %}
                         </div>
                         
                         <div class="flex items-center justify-end w-full px-2 gap-4">
@@ -200,7 +199,7 @@
     </div>
     <!-- MODAL END -->
 
-    <script src="../js/main.js"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 
 </html>
