--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
     <script src="https://kit.fontawesome.com/e87c4faa10.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1fc4ea1c6a.js" crossorigin="anonymous"></script>
-    <title>{{ role.capitalize() if role else 'Profile' }} Profile | {{ display.name }}</title>
+    <title>{{ role.capitalize() if role else 'Profile' }} Profile | {{ name }}</title>
 </head>
 
 <body class="font-Work transition-colors bg-semiWhite">
