--- a/templates/filter.html
+++ b/templates/filter.html
@@ -36,10 +36,10 @@
         <!-- Search START -->
             <div class="pl-8 pr-6 pt-10 flex flex-col gap-6">
                 <div class="flex items-center gap-2">
-                    <form action="{{ url_for('process_form') }}" method="GET" class="flex gap-2">
-                        <input type="text" name="search" placeholder="Search..." autocomplete="off" value="<?= $_GET['search'] ?? " ?>"
-                            class="rounded-md text-\[\#f5f6f8\]] h-10 px-4 py-1 w-[900px] bg-lightGray">
-    
+                    <form action="{{ url_for('process_form') }}" method="get" class="flex gap-2">
+                        <input type="text" name="search" placeholder="Search..." autocomplete="off"
+                            class="rounded-md text-[#f5f6f8] h-10 px-4 py-1 w-[900px] bg-lightGray">
+                        
                         <button type="submit" 
                         class="bg-gradient-to-r from-pink-600 to-purple-600 font-semibold text-xl px-3 py-1 rounded-md flex items-center justify-center h-10 w-24">Search
                         </button>
@@ -52,21 +52,21 @@
             <!-- CONTENT START -->
             <div class="flex flex-col pl-9 pr-4 gap-6">
                 <div class="flex justify-between w-full items-center">
-                    <p class="text-3xl font-semibold text-semiWhite relative -z-10">Showing result for "<?= $_GET['search'] ?? "All Movies" ?>"</p>
+                    <p class="text-3xl font-semibold text-semiWhite relative -z-10">Showing result for "{{ desc }}"</p>
                 </div>
                 <div class="flex w-[100%] flex-wrap gap-y-6 gap-x-4">
                     <!--  -->
-                    {% for i in range(10) %}
-                    <a href="#" class="w-[200px] relative z-2">
-                        <img class="rounded-md shadow-md" src="../static/img/avengersHD.jpg" width="200" alt="">
+                    {% for movie in data.movie_filter %}
+                    <a href="{{ url_for('movie_detail', moviename=movie.moviename) }}" class="w-[200px] relative z-2">
+                        <img class="rounded-md shadow-md" src="{{ movie.image_url }}" width="200" alt="">
                         <div class="min-h-16 h-fit max-w-full">
                             <div class="flex text-sm gap-2">
-                                <p class="border border-1 border-semiWhite px-1 rounded-md">2018</p>
-                                <p class="border border-1 border-semiWhite px-1 rounded-md">PG-13</p>
+                                <p class="border border-1 border-semiWhite px-1 rounded-md">{{ movie.year }}</p>
+                                <p class="border border-1 border-semiWhite px-1 rounded-md">{{ movie.category }}</p>
                             </div>
-                            <p class="font-semibold">Avengers: Infinity War</p>
+                            <p class="font-semibold">{{ movie.moviename }}</p>
                         </div>
-                        <p class="absolute -top-2 left-1/2 transform -translate-x-1/2 bg-green-600 px-2 rounded-full font-semibold">8.0</p>
+                        <p class="absolute -top-2 left-1/2 transform -translate-x-1/2 bg-green-600 px-2 rounded-full font-semibold">{{ movie.rating }}</p>
                     </a>
                     {% endfor %}
                     <!--  -->       
@@ -85,7 +85,7 @@
                 <div class="h-[100vh] w-full rounded-md">
                     <!--  -->
                     {% for i in range(10) %}
-                    <a href="./detail-movie.php" class="flex h-[80px] w-full gap-2 bg-lightGray rounded-md mb-4 overflow-hidden hover:bg-darkGray transition-colors duration-200 ease-in-out">
+                    <a href="#" class="flex h-[80px] w-full gap-2 bg-lightGray rounded-md mb-4 overflow-hidden hover:bg-darkGray transition-colors duration-200 ease-in-out">
                         <img src="../static/img/avengersHD.jpg" height="80" alt="">
 
                         <div class="flex flex-col justify-center">
@@ -134,11 +134,11 @@
                         <p class="text-xl text-semiWhite font-bold">Genre</p>
                         <div  class="flex gap-4 flex-wrap px-4">
                             {% for i in range(1, 20) %}
-                            <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
+                            <label for="genre{{ i }}" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
                                 </div>
-                                <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
+                                <input type="checkbox" id="genre{{ i }}" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">Action</p>
                             </label>
                             {% endfor %}
@@ -147,11 +147,11 @@
                         <p class="text-xl text-semiWhite font-bold">Country</p>
                         <div  class="flex gap-4 flex-wrap px-4">
                             {% for i in range(1, 10) %}
-                            <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
+                            <label for="genre{{ i }}" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
                                 </div>
-                                <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
+                                <input type="checkbox" id="genre{{ i }}" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">Indonesia</p>
                             </label>
                             {% endfor %}
@@ -160,11 +160,11 @@
                         <p class="text-xl text-semiWhite font-bold">Rating</p>
                         <div  class="flex gap-4 flex-wrap px-4">
                             {% for i in range(1, 10) %}
-                            <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
+                            <label for="genre{{ i }}" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
                                 </div>
-                                <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
+                                <input type="checkbox" id="genre{{ i }}" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">5.0</p>
                             </label>
                             {% endfor %}
@@ -173,11 +173,11 @@
                         <p class="text-xl text-semiWhite font-bold">Rating</p>
                         <div  class="flex gap-4 flex-wrap px-4">
                             {% for i in range(1, 10) %}
-                            <label for="genre<?= $i ?>" class="flex gap-4 items-center cursor-pointer">
+                            <label for="genre{{ i }}" class="flex gap-4 items-center cursor-pointer">
                                 <div class="bg-semiWhite w-4 h-4 flex justify-center items-center rounded-full">
                                     <div class="w-3 h-3 rounded-full bg-gradient-to-r from-pink-600 to-purple-600 hidden checkedBox"></div>
                                 </div>
-                                <input type="checkbox" id="genre<?= $i ?>" value="drama" name="genre" class="hidden">
+                                <input type="checkbox" id="genre{{ i }}" value="drama" name="genre" class="hidden">
                                 <p class="unselectable">PG-13</p>
                             </label>
                             {% endfor %}
