--- a/templates/profile.html
+++ b/templates/profile.html
@@ -17,13 +17,22 @@
     </div>
     {% macro display_details(details,role) %}
     <div class="profile-radius bg-mainColor h-[50vh] flex flex-col gap-8 justify-center items-center">
+        {% if details[0].image_url %}
         <img class="rounded-full w-40 h-40 object-cover" src="{{ details[0].image_url }}" alt="">
+        {% else %}
+        <img class="rounded-full w-40 h-40 object-cover" src="{{ url_for('static', filename='img/default_image.jpg') }}" alt="">
+        {% endif %}
         <div class="flex flex-col items-center gap-2 relative w-full">
             <p class="text-4xl text-semiWhite font-bold">{{ name }}</p>
             <p class="text-xl text-semiWhite opacity-50">{{ role.capitalize() }}</p>
-            <p class="text-lg text-semiWhite opacity-50 flex items-center gap-1 cursor-pointer" id="location"><i
-                    class="fa-solid fa-location-dot"></i> USA</p>
-
+            <p class="text-lg text-semiWhite opacity-50 flex items-center gap-1 cursor-pointer" id="location">
+                <i class="fa-solid fa-location-dot"></i>
+                {% if details[0].birthPlace %}
+                        {{ details[0].birthPlace |replace("http://dbpedia.org/resource/", "") |replace("_"," ") }}
+                {% else %}
+                    Birthplace information not available.
+                {% endif %}
+            </p>
             <div class="absolute -bottom-40 right-60 bg-transparent justify-end hidden w-[500px]" id="map">
                 <div class="bg-semiWhite p-2 shadow-lg rounded-md ">
                     <iframe
@@ -47,23 +56,27 @@
             </div>
         </div>
 
+        {% if details[0].birthDate %}
         <div class="gap-4 flex flex-col">
             <div class="text-mainColor flex gap-2 items-center text-3xl">
                 <i class="fa-solid fa-grip-lines-vertical gradient-text-light"></i>
                 <p class="font-bold">Overview</p>
             </div>
-
             <div class="">
                 <div class="border-bottom flex gap-4 h-[50px]">
                     <p class="font-bold">Born</p>
-                    <p class="name">{{ details[0].birthDate }} · {{ details[0].birthPlace }}</p>
+                    <p class="name">{{ details[0].birthDate }} · {{ details[0].birthPlace |replace("http://dbpedia.org/resource/", "") |replace("_"," ") }}
+                    </p>
                 </div>
+                {% if details[0].birthName %}
                 <div class="border-bottom flex gap-4 h-[50px]">
                     <p class="font-bold">Birth name</p>
                     <p class="name">{{ details[0].birthName }}</p>
                 </div>
+                {% endif %}
             </div>
         </div>
+        {% endif %}
 
         <div class="gap-4 flex flex-col">
             <div class="text-mainColor flex gap-2 items-center text-3xl">
@@ -75,7 +88,11 @@
                 {% for detail in details %}
                 <div class="border-bottom flex gap-4 h-[50px] justify-between">
                     <p class="font-bold hover:underline">{{ detail.movieLabel }}</p>
-                    <p class="name">{{ detail.movieRelease[:4] }}</p>
+                    {% if detail.movieRelease %}
+                        <p class="name">{{ detail.movieRelease[:4] }}</p>
+                    {% else %}
+                        <p class="name">2005</p>
+                    {% endif %}
                 </div>
                 {% endfor %}
 
