adding leaflet.js for open street maps

--- a/templates/detail-movie.html
+++ b/templates/detail-movie.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="{{ details.moviename }}" />
+    <meta property="og:description" content="Detailed Information of {{ details.moviename }}" />
+    <meta property="og:image" content="{{ details.image_url }}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="MOVA" />
     <link rel="stylesheet" href="../static/css/style.css" />
     <script src="https://kit.fontawesome.com/e87c4faa10.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/1fc4ea1c6a.js" crossorigin="anonymous"></script>
